--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -138,6 +138,7 @@
   - path = "l_accademia" if ["/", ""].include? request.path
   - not_home = path != "l_accademia"
   %body.bg-black{ class: "#{controller.controller_name} #{controller.action_name} #{"master" if master?} #{"admin" if admin?} #{path} #{"not-home" if not_home}"}
+    .separator50
     #cookies.cookie_bar.line-compress.color-white.hidden.fixed.top
       .separator5
       .line
@@ -193,58 +194,51 @@
       / social top nav
       / end social nav
       / header and menu
-      #slide.line.bg-white
-        #top-menu-social.line.line-max.bg-mute.color-white
-          .line-compress.top-menu.line-max
-            .separator5
-            .top-menu-social.col4
-              &nbsp;
-              %a{:href => "https://www.facebook.com/accademiaartedesigncappiello", :target => "_blank"}
-                %i.fa.fa-facebook-official
-              %a{:href => "http://twitter.com/Acc_Cappiello", :target => "_blank"}
-                %i.fa.fa-twitter
-              %a{:href => "http://instagram.com/accademiacappiello", :target => "_blank"}
-                %i.fa.fa-instagram
-              %a{:href => "http://www.flickr.com/photos/accademiacappiello/", :target => "_blank"}
-                %i.fa.fa-flickr
-              %a{:href => "http://vimeo.com/user5798268", :target => "_blank"}
-                %i.fa.fa-vimeo
-              .separator3
-              .separator1
-            .col5.push-right
-              .desktop
-                .separator5
-                %span
-                  %ul.line.right-content
-                    %li.line.right-content
-                      %a.bg-muted.color-white.radius20.toggle-opacity-inverse-hover{:href => "#"}
-                        %small
-                          &nbsp;&nbsp; AREA UTENTI &nbsp;&nbsp;
-
-                      %a.color-white.toggle-opacity-inverse-hover{:href => "/pag/contatti"}
-                        &nbsp;&nbsp;&nbsp;&nbsp;
-                        %i.fa.fa-phone.color-white
-                          Telefono &nbsp;&nbsp;
-                      %a.color-white.toggle-opacity-inverse-hover{:href => "mailto:info@accademiacappiello.it"}
-                        &nbsp;&nbsp;&nbsp;
-                        %i.fa.fa-envelope.color-white
-                        &nbsp;&nbsp;Email &nbsp;&nbsp;
-            .separator3
-          .mobile.tablet
+      #top-menu-social.color-white
+        .line-compress.top-menu
+          .separator5
+          .top-menu-social.col4
+            &nbsp;
+            %a{:href => "https://www.facebook.com/accademiaartedesigncappiello", :target => "_blank"}
+              %i.fa.fa-facebook-official
+            %a{:href => "http://twitter.com/Acc_Cappiello", :target => "_blank"}
+              %i.fa.fa-twitter
+            %a{:href => "http://instagram.com/accademiacappiello", :target => "_blank"}
+              %i.fa.fa-instagram
+            %a{:href => "http://www.flickr.com/photos/accademiacappiello/", :target => "_blank"}
+              %i.fa.fa-flickr
+            %a{:href => "http://vimeo.com/user5798268", :target => "_blank"}
+              %i.fa.fa-vimeo
             .separator3
             .separator1
-        .separator15
+          .col5.push-right
+            .desktop
+              .separator3
+              %span
+                %ul.line.right-content
+                  %li.line.right-content
+                    %a.bg-muted.color-white.radius20.toggle-opacity-inverse-hover{:href => "#"}
+                      %small
+                        &nbsp;&nbsp; AREA UTENTI &nbsp;&nbsp;
+
+                    %a.color-white.toggle-opacity-inverse-hover{:href => "/pag/contatti"}
+                      &nbsp;&nbsp;&nbsp;&nbsp;
+                      %i.fa.fa-phone.color-white
+                        Telefono &nbsp;&nbsp;
+                    %a.color-white.toggle-opacity-inverse-hover{:href => "mailto:info@accademiacappiello.it"}
+                      &nbsp;&nbsp;&nbsp;
+                      %i.fa.fa-envelope.color-white
+                      &nbsp;&nbsp;Email &nbsp;&nbsp;
+          .separator5
+      #slide.line.bg-white
         .line-compress.line-max.header#top-menu
           .col2.line-tablet.center-content-tablet
-            .separator50.mobile.tablet.no-scroll
+            .separator3
             %a{:href => "/pag/l_accademia"}
-              %img.logo.scroll{:src => "/images/logo.png"}
-              %img.logo.no-scroll{:src => "/images/logo-white.png"}
+              %img.logo{:src => "/images/logo.png"}
 
           .col8.right-content.desktop
             .header-menu.desktop
-              .separator15
-              .separator10
               - nav_link :l_accademia
               %a#link-corsi{ href: "/#corsi" } Corsi
               - nav_link :news
@@ -253,20 +247,7 @@
               - nav_link :open_days
               %a#link-contatti{ href: "/#contatti" } Contatti
               -# nav_link :contatti
-          .separator100
-          .separator50.desktop
-          .separator30
 
-          .separator100
-          .separator30.desktop
-          .slogan.line
-            .line.center-content-tablet
-            .separator30.mobile
-            .separator15
-            %h1.color-white.font-custom.center-content-tablet
-              Dal 1956,
-              %h2.color-white.line.center-content-tablet il luogo ideale per esprimere la propria creatività
-        .separator15
       / end header and menu
 
       / --------------content
@@ -285,32 +266,6 @@
       -# ------------
 
       #fb-root
-      :javascript
-        var DynamicMenuBar = function DynamicMenuBar () {
-          // console.log('Scroll Top', $(window).scrollTop());
-          if ($(window).scrollTop() > 100) {
-
-            $('.slogan').fadeOut(0);
-            $('#top-menu').addClass('scrolling');
-          } else if ($(window).scrollTop() <= 100){
-
-            $('#top-menu').removeClass('scrolling');
-            $('.slogan').fadeIn(600);
-          }
-        };
-        $(window).on('scroll resize', function () {
-          if (!$('body').hasClass('not-home')) {
-            DynamicMenuBar();
-          } else {
-          $('#top-menu').addClass('scrolling');
-          }
-        });
-        if (!$('body').hasClass('not-home')) {
-
-          DynamicMenuBar();
-        } else {
-          $('#top-menu').addClass('scrolling');
-        }
 
       :javascript
 
