--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -1,4 +1,8 @@
+
 .bg-white
+.line.bg-black.color-white
+  .separator100
+  SLIDERINO here
 .line.bg-white
   .separator50
   .line-compress.line-max
