--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -101,6 +101,8 @@
     -# TODO UI salvare il font
     -# %link{:href => "https://fonts.googleapis.com/css?family=Open+Sans:400,700italic,700,600italic,600,400italic,300italic,300&subset=latin,cyrillic-ext", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "/stylesheets/fancybox.css", :rel => "stylesheet"}/
+    %link{:href => "http://www.owlcarousel.owlgraphic.com/assets/owlcarousel/assets/owl.carousel.min.css", :rel => "stylesheet"}/
+    %link{:href => "http://www.owlcarousel.owlgraphic.com/assets/owlcarousel/assets/owl.theme.default.min.css", :rel => "stylesheet"}/
     = stylesheet_link_tag "main_responsive"#, :cache =>  "cache/all"
     - unless Rails.env == "production"
       - debug = " anonym_id: #{session[:anonym_id]}"
@@ -123,6 +125,7 @@
     -# %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js", :type => "text/javascript"}
     = javascript_include_tag "jquery", "jquery-cycle", "jquery-swfobject", "jquery-flickr", "jquery-mousewheel", "jquery-fancybox", "master"
     = yield :head
+    %script{ type: "text/javascript", :src => "https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/owl.carousel.min.js"}
     %script{ type: "text/javascript" }
       var action = '#{controller.action_name}'
       var resources = '#{controller.controller_name.pluralize}'
