--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -3,11 +3,11 @@
 .line.color-white
   .separator50
   .separator15
-  .owl-carousel.line
+  .owl-carousel.line.bg-white
     .item
-      %img{:src => "http://owlgraphic.com/owlcarousel/demos/assets/fullimage3.jpg"}
+      %img{:src => "/images/corsi/corso_photoshop.jpg"}
     .item
-      %img{:src => "http://owlgraphic.com/owlcarousel/demos/assets/fullimage2.jpg"}
+      %img{:src => "/images/corsi/corso_web_design.jpg"}
   :javascript
       $(document).ready(function() {
 
