--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -3,7 +3,7 @@
 .line.color-white
   .separator50
   .separator15
-  .owl-carousel.line.bg-white
+  .owl-carousel.line.bg-black
     .item
       %img{:src => "/images/corsi/corso_photoshop.jpg"}
     .item
