--- a/app/views/pages_new/_contatti.haml
+++ b/app/views/pages_new/_contatti.haml
@@ -10,9 +10,11 @@
     #map_canvas
     .separator30
     .line.article
-      %h3 Accademia d’Arte e Design Leonetto Cappiello
       .col7.line-tablet
+
+        %h1 Indirizzo
         .separator15
+        %h4 Accademia d’Arte e Design Leonetto Cappiello
         %p
           Viale Michelangiolo 19, 50125
           %span.caps FIRENZE
@@ -25,7 +27,7 @@
           %br/
           da Lunedì a Venerdì 9.00-13.00, 16.00-18.00
         %p
-          %strong email
+          %h1 Email
           %br/
           %a{:href => "mailto:info@accademiacappiello.it"} info@accademiacappiello.it
         %p
@@ -36,6 +38,7 @@
           04049410485
         .separator5
       .col3.line-tablet
+        %h1 Social Networks
         %p
           %a{:href => "https://www.facebook.com/accademiaartedesigncappiello"}
             %i.fa.fa-facebook-square &nbsp; Facebook
@@ -43,6 +46,8 @@
           .separator5
           %a{:href => "https://twitter.com/Acc_Cappiello"}
             %i.fa.fa-twitter &nbsp; Twitter
+        .separator15
+        %h1 Info
         %p
           %a{:href => "http://maps.google.it/maps?client=safari&oe=UTF-8&ie=UTF8&q=accademia+cappiello+firenze&fb=1&gl=it&hq=accademia+cappiello&hnear=Florence&t=h&z=16&iwloc=A"}
             %span.caps COME
