--- a/app/views/pages_new/_contatti.haml
+++ b/app/views/pages_new/_contatti.haml
@@ -9,7 +9,7 @@
     .separator30
     #map_canvas
     .separator30
-    .line.article
+    .line.article.center-content-tablet
       .col7.line-tablet
 
         %h1 Indirizzo
