--- a/app/views/pages_new/_contatti.haml
+++ b/app/views/pages_new/_contatti.haml
@@ -42,11 +42,11 @@
         %h1 Social Networks
         %p
           %a{:href => "https://www.facebook.com/accademiaartedesigncappiello"}
-            %i.fa.fa-facebook-square &nbsp; Facebook
+            Facebook
           %br/
           .separator5
           %a{:href => "https://twitter.com/Acc_Cappiello"}
-            %i.fa.fa-twitter &nbsp; Twitter
+            Twitter
         .separator15
         %h1 Info
         %p
