--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -184,6 +184,13 @@
           .separator15
           %a.btn.btn-small.color-white.bg-primary Area utenti
         .separator15
+        .line.center-content
+          Lingua
+          %a.font-medium.color-primary italiano
+          %span
+            |
+          %a.color-white english
+        .separator15
         %a.color-white{:href => "/#contatti"}
           %i.fa.fa-phone
           Telefono
@@ -220,6 +227,7 @@
               %span
                 %ul.line.right-content
                   %li.line.right-content
+
                     %a.bg-muted.color-white.radius20.toggle-opacity-inverse-hover{:href => "#"}
                       %small
                         &nbsp;&nbsp; AREA UTENTI &nbsp;&nbsp;
@@ -232,6 +240,12 @@
                       &nbsp;&nbsp;&nbsp;
                       %i.fa.fa-envelope.color-white
                       &nbsp;&nbsp;Email &nbsp;&nbsp;
+                    %span
+                      Lingua
+                      %a.font-medium.color-primary italiano
+                      %span
+                        |
+                      %a.color-white english
           .separator5
       #slide.line.bg-white
         .line-compress.line-max.header#top-menu
