--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -367,3 +367,8 @@ opacity:.8;
   right:2%;
   text-indent:2px;
 }
+.box{
+
+  box-shadow:0 1px 4px rgba(0,0,0, .2);
+  border-bottom:1px solid rgba(0,0,0, .1);
+}
