--- a/app/views/pages_new/_corsi.haml
+++ b/app/views/pages_new/_corsi.haml
@@ -74,6 +74,7 @@
               .separator5
               .widget-desc
                 %h6= corso[:desc_small]
+              .separator10
               .line
                 .col7.line-tablet
                 .col3.line-tablet
