--- a/app/views/pages_new/_corsi.haml
+++ b/app/views/pages_new/_corsi.haml
@@ -11,38 +11,8 @@
     .line.article
       :ruby
         # raise NuPage.all.inspect
-        pages = NuPage.all_saf
-
-        pages.reject! do |page|
-          page.parent_id.blank?
-        end
-
-        pages.reject! do |page|
-          %w(
-            l_accademia
-            borse_di_studio
-            contatti
-            corsi_annuali
-            corsi_esitvi
-            corsi_master
-            date_e_orari
-            formula_master
-            incontro-tutor
-            info
-            laboratori
-            news
-            open_days
-
-            students-info
-            corso_3d_studio_max_interior_design
-            corso_autocad_interior_design
-          ).include? page.title_url_it
-        end
-
-        pages.reject! do |page|
-          page.title_url_it =~ /autocad/
-        end
-
+        # pages = NuPage.all_saf
+        pages = NuPage.all_saf_filtered
 
         corsi = []
         pages.each do |page|
