--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -3,29 +3,33 @@
   .separator50
   .separator15
   .owl-carousel.line.bg-black
-    - nu_pages = NuPage.all
-    - pages = []
-    - nu_pages.each do |page|
-      - pages << Hashie::Mash.new( name: page, img_url: "not_set" ) }
-      
-    - pages = pages.map{ |page| page.img_url = "/images/corsi/#{page.name}.jpg" }
-
+    :ruby
+      pages = NuPage.all_saf_filtered
+      pages = pages.map{ |page| page.title_url_it }
+      pages = pages.map do |page|
+        Hashie::Mash.new( name: page, img_url: "not_set" )
+      end
+      pages = pages.map{ |page| page.img_url = "/images/corsi/#{page.name}.jpg"; page }
 
     -# - pages = pages.map{ |page| page.antani = "eccome!"; } # sets page to page.name in the "pages" array
     - for page in pages
       .item
         %img{:src => page.img_url }
+
   :javascript
       $(document).ready(function() {
 
       $(".owl-carousel").owlCarousel({
         items: 1,
-        mouseDrag: true,
+        mouseDrag: false,
         pullDrag: true,
         touchDrag:true,
         autoplay:true,
         autoplaySpeed: 1000,
-        autoplayTimeout:6000,
+        autoplayTimeout:5000,
+        loop: true,
+        autoHeight : true,
+        // lazyLoad : true,
         navText: ['<i class="fa fa-chevron-left"></i>', '<i class="fa fa-chevron-right"></i>']
       });
     });
