--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -372,3 +372,7 @@ opacity:.8;
   box-shadow:0 1px 4px rgba(0,0,0, .2);
   border-bottom:1px solid rgba(0,0,0, .1);
 }
+.fixed-height {
+  height: 450px;
+  background: #FFF;
+}
