--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -239,16 +239,16 @@ margin: 0 1%;
 float: left;
 box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 overflow: hidden;
-height:380px;
-max-height:380px;
+height:387px;
+max-height:387px;
 }
 .widget-pic{
   height:200px;
 }
 .widget-desc{
   overflow:hidden;
-  min-height: 90px;
-  height:90px;
+  min-height: 94px;
+  height:94px;
 }
 .widget:hover {
 box-shadow: 0 0px 4px rgba(0, 0, 0, 0.2); }
@@ -367,12 +367,19 @@ opacity:.8;
   right:2%;
   text-indent:2px;
 }
-.box{
-
+.box {
   box-shadow:0 1px 4px rgba(0,0,0, .2);
   border-bottom:1px solid rgba(0,0,0, .1);
 }
 .fixed-height {
   height: 450px;
   background: #FFF;
+}
+.grid-item {
+  margin-bottom: 2%;
+}
+@media screen and (max-width: 800px) {
+  .grid-item {
+    margin-bottom: 3%;
+  }
 }
