--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -221,7 +221,7 @@
               %i.fa.fa-vimeo
             .separator3
             .separator1
-          .col5.push-right
+          .col5.top-menu-right.push-right
             .desktop
               .separator3
               %span
