--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -122,7 +122,8 @@
     %meta{ property: "og:url", content: request_url }/
     %meta{ property: "fb:admins", content: "1218562195" }/
     -# TODO UI downloadare e vendorizzare
-    -# %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js", :type => "text/javascript"}
+    -# %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.7.2/jquery.smooth-scroll.min.js", :type => "text/javascript"}
+    %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.7.2/jquery.smooth-scroll.min.js", :type => "text/javascript"}
     = javascript_include_tag "jquery", "jquery-cycle", "jquery-swfobject", "jquery-flickr", "jquery-mousewheel", "jquery-fancybox", "isotope", "owl-carousel", "master"
     = yield :head
 
@@ -283,7 +284,12 @@
       -# ------------
 
       #fb-root
-
+      :javascript
+        $('.header a').smoothScroll({
+          'offset': 50,
+          'speed': 350,
+          'preventDefault': true
+        });
       :javascript
 
         if (window.location.hash) {
