fix links - remove jquery 3, add jquery 2.2 - staticize all the libs daaane pippuz

--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -1,6 +1,6 @@
 .bg-white
 .line.color-white
-  .separator50
+  .separator50#accademia
   .separator15
   .fixed-height
     .owl-carousel.line.bg-black
