--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -121,11 +121,9 @@
     %meta{ property: "og:description", content: meta_description }/
     %meta{ property: "og:url", content: request_url }/
     %meta{ property: "fb:admins", content: "1218562195" }/
-    -# TODO UI downloadare e vendorizzare
-    %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js", :type => "text/javascript"}
-    = javascript_include_tag "jquery", "jquery-cycle", "jquery-swfobject", "jquery-flickr", "jquery-mousewheel", "jquery-fancybox", "isotope", "owl-carousel", "master"
+
+    = javascript_include_tag "jquery", "jquery-cycle", "jquery-swfobject", "jquery-flickr", "jquery-mousewheel", "jquery-fancybox", "jquery-smoothscroll", "isotope", "owl-carousel", "master"
     = yield :head
-    %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.7.2/jquery.smooth-scroll.min.js", :type => "text/javascript"}
 
     %script{ type: "text/javascript" }
       var action = '#{controller.action_name}'
@@ -169,19 +167,19 @@
         .separator30
         .separator10
         .col6.offset-left2.radius3
-          %a.btn.btn-small.bg-muted.color-white{:href => "/"} Accademia
+          %a.btn.btn-small.bg-muted.color-white{:href => "/#accademia"} Accademia
           .separator10
-          %a#link-mobile-corsi.btn.btn-small.bg-muted.color-white.smooth-scroll{:href => "#corsi"} Corsi
+          %a#link-mobile-corsi.btn.btn-small.bg-muted.color-white.smooth-scroll{:href => "/#corsi"} Corsi
           .separator10
           - nav_link :news
           .separator10
-          %a#link-mobile-gallery.btn.btn-small.bg-muted.color-white.smooth-scroll{:href => "#gallery"} Gallery
+          %a#link-mobile-gallery.btn.btn-small.bg-muted.color-white.smooth-scroll{:href => "/#gallery"} Gallery
           .separator10
-          %a#link-mobile-borse-di-studio.btn.btn-small.bg-muted.color-white.smooth-scroll{:href => "#borse_di_studio"} Borse di Studio
+          %a#link-mobile-borse-di-studio.btn.btn-small.bg-muted.color-white.smooth-scroll{:href => "/#borse_di_studio"} Borse di Studio
           .separator10
           %a.btn.btn-small.bg-muted.color-white Open Day
           .separator10
-          %a#link-mobile-contatti.btn.btn-small.bg-muted.color-white.smooth-scroll{:href => "#contatti"} Contatti
+          %a#link-mobile-contatti.btn.btn-small.bg-muted.color-white.smooth-scroll{:href => "/#contatti"} Contatti
           .separator15
           %a.btn.btn-small.color-white.bg-primary Area utenti
         .separator15
@@ -257,13 +255,13 @@
 
           .col8.right-content.desktop
             .header-menu.desktop
-              - nav_link :l_accademia
-              %a#link-corsi.smooth-scroll{ href: "#corsi" } Corsi
+              %a#link-accademia.smooth-scroll{ href: "/#accademia" } L'Accademia
+              %a#link-corsi.smooth-scroll{ href: "/#corsi" } Corsi
               - nav_link :news
-              %a#link-gallery.smooth-scroll{ href: "#gallery" } La Gallery
-              %a#link-borse-di-studio.smooth-scroll{ href: "#borse-di-studio" } Borse di studio
+              %a#link-gallery.smooth-scroll{ href: "/#gallery" } La Gallery
+              %a#link-borse-di-studio.smooth-scroll{ href: "/#borse-di-studio" } Borse di studio
               - nav_link :open_days
-              %a#link-contatti.smooth-scroll{ href: "#contatti" } Contatti
+              %a#link-contatti.smooth-scroll{ href: "/#contatti" } Contatti
               -# nav_link :contatti
 
       / end header and menu
