fix link and gallery

--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -62,7 +62,7 @@
                 .line.article
                   .separator15
                   %h1 Foto del corso
-                  #photos{ :"data-set_id" => gallery_id }
+                  #photos{ data: { set_id: gallery_id } }
 
 
           .separator50
