--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -250,7 +250,7 @@
         .line-compress.line-max.header#top-menu
           .col2.line-tablet.center-content-tablet
             .separator3
-            %a{:href => "/pag/l_accademia"}
+            %a{:href => "/#accademia"}
               %img.logo{:src => "/images/logo.png"}
 
           .col8.right-content.desktop
