--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -32,7 +32,7 @@
         autoplaySpeed: 1000,
         autoplayTimeout:5000,
         loop: true,
-        // center: true,
+        center: true,
         autoHeight : true,
         // lazyLoad : true,
         navText: ['<i class="fa fa-chevron-left"></i>', '<i class="fa fa-chevron-right"></i>']
